1.7.1
* "Version" moved from "github.com/piotrnar/gocoin/lib" to "github.com/piotrnar/gocoin"
* Leave external dependencies (siphash, snappy, ripemd160) to be dealt with by "go get"
* Client: support for BIP-152 - "Compact Block Relay"

1.7.1 - 2016-08-22
* Client: WebUI/MakeTX - display raw transaction after clicking no the ID.
* Client: "common.CFG.AllBalances.MinValue" is only applied during init now (change it restart to apply)
* Downloader: fix loosing the content of *btc.Block structure between PreCheckBlock() and PostCheckBlock()
* Client: shows text messages attached to transactions (the first push after OP_RETURN)
* Downloader: fix for getting stuck at fetching headers if the top would happen to be orphaned
* Client: WebUI - "balance.json" support "summary" (to not include list of unspent outputs)
* Client: WebUI/MakeTX - fixed sorting of outputs by block height
* Client: records in balance/unsepnt.txt (inside balance.zip) are sorted by block height
* Client: New TextUI command "unspent"
* Client: P2SH and P2KH balance indexes are kept in separate maps
* Client: support for BIP 133 ("feefilter" messages)
* Client: responds at most once to a getaddr request during the lifetime of a connection
* Client: expire peer's GetBlockInProgress after one hour
* WebUI: new buttons "Move left" & "Move right" in "Wallet" tab, for sorting order of the wallets

1.7.0 - 2016-07-24
* AllBalances mode - enabled by config value AllBalances
* WebUI: Import / export wallets form/to a JSON file
* Switched off support for stealth addresses
* Client: do not try to commit a block until all off its parents are done - added HasAllParents() method
* Client: CommitBlock() returns error, discard all the blocks that depend on it - added network.DiscardedBlocks
* Wallet: "-p2sh <hex>" command can be used with "-input <int>" to alter only a single input of the transaction
* WebUI: Option to show averaged value of the blocks' sizes, tx counts, SPBs

1.6.4 - 2016-06-27